# finserv

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: automation-tests.yml  ci.yml  commands.yml  devin-ci-fix.yml  devin-pr-closed.yml  implement.yml  pr-merge-done.yml  pr-status.yml  triage.yml
automation/: devin_api.py
automation/orchestrator/: devin_client.py
automation/orchestrator/schemas/: devin.py  github.py
automation/tests/: test_devin_api_script.py  test_devin_client.py
docs/: api.html
playbooks/: implement.md  triage.md
services/market_data/: main.py  provider.py  routes.py  schemas.py
services/market_data/tests/: test_provider.py
services/notifications/: main.py  routes.py  triggers.py
services/notifications/tests/: test_triggers.py
services/onboarding/: kyc.py  main.py  routes.py  validators.py
services/onboarding/tests/: test_validators.py
services/portfolio/: calculator.py  db.py  errors.py  main.py  routes.py
services/portfolio/tests/: test_calculator.py  test_routes.py
services/risk_engine/: db.py  main.py  questionnaire.py  routes.py
services/risk_engine/tests/: test_questionnaire.py
services/tax/: cgt.py  constants.py  isa.py  main.py  routes.py  tax_loss_harvesting.py
services/tax/tests/: test_cgt.py  test_isa.py
shared/auth/: __init__.py  jwt_handler.py
shared/types/: __init__.py  models.py
web/: index.html  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/components/: Dashboard.tsx  ISASummary.tsx  NotificationList.tsx  (+4 more)
(+6 files in other folders)
